rhossm-grpc-example/ossm/grpc-server-pre/vs-greeter-server.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ingress-greeter
  namespace: grpc-server
spec:
  gateways:
  - istio-system-pre/default-ingress
  - mesh
  hosts:
  - greeter-server.${EXTERNAL_DOMAIN}
  http:
  - match:
    - gateways:
      - istio-system-pre/default-ingress
      authority:
        exact: 'greeter-server.${EXTERNAL_DOMAIN}:443'
    route:
    - destination:
        host: greeter-server
        port:
          number: 8000
        subset: greeter-server
      weight: 100
    timeout: 4s
